--- a/.github/workflows/pr-gpu.yaml
+++ b/.github/workflows/pr-gpu.yaml
@@ -1,56 +1,88 @@
 name: PR GPU tests
 on:
-  pull_request:
+  pull_request_target:
   workflow_dispatch:
-# Cancel old runs when a new commit is pushed to the same branch if not on main or dev
+# Cancel old runs when a new commit is pushed to the same branch if not on main
+# or dev
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' && github.ref != 'refs/heads/dev' }}
 jobs:
   pytest-gpu-1:
-    uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml
+    uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml@v0.0.7
+    strategy:
+      matrix:
+        include:
+        - name: Pytest GPU 1 GPU
+          container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
+          markers: not daily and not remote and gpu and (doctest or not doctest)
+          pytest_command: coverage run -m pytest
+          composer_package_name: mosaicml
+    name: ${{ matrix.name }}
+    if: github.repository_owner == 'mosaicml'
     with:
-      container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
+      composer_package_name: ${{ matrix.composer_package_name }}
+      container: ${{ matrix.container }}
       git_repo: mosaicml/composer
-      name: Pytest GPU 1 GPU
-      pip_deps: "[all]"
-      pytest-command: coverage run -m pytest
-      pytest-markers: not daily and not remote and gpu and (doctest or not doctest)
-      python-version: 3.9
       mcloud-timeout: 2250
-      composer_package_name: mosaicml
+      name: ${{ matrix.name }}
+      pip_deps: "[all]"
+      pytest-command: ${{ matrix.pytest_command }}
+      pytest-markers: ${{ matrix.markers }}
+      python-version: 3.9
       gpu_num: 1
     secrets:
       mcloud-api-key: ${{ secrets.MCLOUD_API_KEY }}
 
   pytest-gpu-2:
-    uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml
+    uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml@v0.0.7
+    strategy:
+      matrix:
+        include:
+        - name: Pytest GPU 2 GPU
+          container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
+          markers: not daily and not remote and gpu and (doctest or not doctest)
+          pytest_command: coverage run -m pytest
+          composer_package_name: mosaicml
+    name: ${{ matrix.name }}
+    if: github.repository_owner == 'mosaicml'
     with:
-      container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
+      composer_package_name: ${{ matrix.composer_package_name }}
+      container: ${{ matrix.container }}
       git_repo: mosaicml/composer
-      name: Pytest GPU 2 GPUs
-      pip_deps: "[all]"
-      pytest-command: coverage run -m pytest
-      pytest-markers: not daily and not remote and gpu and (doctest or not doctest)
-      python-version: 3.9
       mcloud-timeout: 2250
-      composer_package_name: mosaicml
+      name: ${{ matrix.name }}
+      pip_deps: "[all]"
+      pytest-command: ${{ matrix.pytest_command }}
+      pytest-markers: ${{ matrix.markers }}
+      python-version: 3.9
       gpu_num: 2
     secrets:
       mcloud-api-key: ${{ secrets.MCLOUD_API_KEY }}
 
-  pytest-gpu-4:
-    uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml
+
+  pytest-gpu-1:
+    uses: mosaicml/ci-testing/.github/workflows/pytest-gpu.yaml@v0.0.7
+    strategy:
+      matrix:
+        include:
+        - name: Pytest GPU 4 GPU
+          container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
+          markers: not daily and not remote and gpu and (doctest or not doctest)
+          pytest_command: coverage run -m pytest
+          composer_package_name: mosaicml
+    name: ${{ matrix.name }}
+    if: github.repository_owner == 'mosaicml'
     with:
-      container: mosaicml/pytorch:2.3.0_cu121-python3.11-ubuntu20.04
+      composer_package_name: ${{ matrix.composer_package_name }}
+      container: ${{ matrix.container }}
       git_repo: mosaicml/composer
-      name: Pytest GPU 4 GPUs
-      pip_deps: "[all]"
-      pytest-command: coverage run -m pytest
-      pytest-markers: not daily and not remote and gpu and (doctest or not doctest)
-      python-version: 3.9
       mcloud-timeout: 2250
-      composer_package_name: mosaicml
+      name: ${{ matrix.name }}
+      pip_deps: "[all]"
+      pytest-command: ${{ matrix.pytest_command }}
+      pytest-markers: ${{ matrix.markers }}
+      python-version: 3.9
       gpu_num: 4
     secrets:
       mcloud-api-key: ${{ secrets.MCLOUD_API_KEY }}
