--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -179,7 +179,7 @@ RUN add-apt-repository ppa:deadsnakes/ppa && \
     rm -rf /var/lib/apt/lists/*
 
 RUN curl -fsSL https://bootstrap.pypa.io/get-pip.py | python${PYTHON_VERSION} - && \
-    pip${PYTHON_VERSION} install --no-cache-dir --upgrade 'pip<23' 'setuptools<70.0.0'
+    pip${PYTHON_VERSION} install --no-cache-dir --upgrade 'pip<23' setuptools packaging
 
 #####################
 # Install pillow-simd
